# github-actions-experiments

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  setup.cfg
.github/workflows/: dev_publish.yml  test_publish.yml  tests.yml
src/dummy_lib/: __init__.py  dummy_func.py  version.py
tests/dummy_lib/: test_dummy_func.py
