[metadata]
name = dummy-lib-sane-development
version = attr: dummy_lib.__version__
author = Sane Development
author_email = sane.development.org@gmail.com
description = A dummy library for GitHub Actions experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SaneDevelopment
license = BSD 3-Clause License
project_urls =
    Bug Tracker = https://github.com/SaneDevelopment
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Information Technology
keywords =
    Experiment

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src